--- a/Portal/package.json
+++ b/Portal/package.json
@@ -12,6 +12,8 @@
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-hash": "^2.0.3",
+    "react-native-web": "^0.17.7",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "typescript": "^4.1.2"
