--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,4 @@
 # This CODEOWNERS file follows the format of Github's CODEOWNERS
 #   Documentation for reference, https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-* @Mindaugas-Adomavicius
-* @Aidas-Vaiksnoras
+* @Mindaugas-Adomavicius @Aidas-Vaiksnoras
