--- a/AccessTokenGenerator/package.json
+++ b/AccessTokenGenerator/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "serve": "node dist/index.js",
     "start": "npm run serve",
     "build": "tsc -p tsconfig.json"
+  },
+  "resolutions": {
+    "got": "11.8.5"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +28,8 @@
     "@types/node": "^17.0.0",
     "@types/node-fetch": "^3.0.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "npm-force-resolutions": "^0.0.10",
+    "sax": "1.2.4"
   }
 }
