--- a/Portal/package.json
+++ b/Portal/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@azure/storage-blob": "^12.8.0",
-    "@itwin/itwinui-react": "^1.11.0",
+    "@itwin/itwinui-css": "^0.51.0",
+    "@itwin/itwinui-react": "^1.18.0",
     "@reach/router": "^1.3.4",
+    "ajv": "8.11.0",
+    "ajv-formats": "2.1.1",
+    "ajv-keywords": "5.1.0",
     "dotenv": "^10.0.0",
     "node-sass": "^7.0.1",
     "oidc-client": "^1.11.5",
@@ -15,14 +19,19 @@
     "react-native-hash": "^2.0.3",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "prettier": "prettier --write ."
+  },
+  "resolutions": {
+    "nth-check": "2.0.1",
+    "async": "2.6.4"
   },
   "proxy": "http://localhost:3001/",
   "eslintConfig": {
@@ -46,10 +55,11 @@
   "devDependencies": {
     "@types/node": "^12.20.37",
     "@types/reach__router": "^1.3.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-table": "^7.7.1",
     "@types/uuid": "^8.3.4",
+    "npm-force-resolutions": "^0.0.10",
     "openapi-typescript": "^4.5.0",
     "prettier": "^2.3.0"
   }
