--- a/AccessTokenGenerator/package.json
+++ b/AccessTokenGenerator/package.json
@@ -27,7 +27,6 @@
     "@types/node": "^17.0.0",
     "@types/node-fetch": "^3.0.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "sax": "1.2.4"
+    "typescript": "^4.5.4"
   }
 }
