--- a/ExternalStorageDrive/package.json
+++ b/ExternalStorageDrive/package.json
@@ -8,24 +8,23 @@
     "start": "npm run serve",
     "build": "tsc -p tsconfig.json"
   },
-  "resolutions": {
-    "got": "11.8.5"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/msal-node": "^1.9.0",
     "azure-storage": "^2.10.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "@azure/storage-blob": "^12.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
-    "@types/node-fetch": "^3.0.3",
+    "@types/node-fetch": "^2.6.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   }
