--- a/Portal/package.json
+++ b/Portal/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "api-demo-sample",
+  "name": "synchronization-manifest-api-sample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@azure/storage-blob": "^12.8.0",
-    "@itwin/itwinui-css": "^0.51.0",
-    "@itwin/itwinui-react": "^1.18.0",
+    "@itwin/itwinui-css": "^0.16.0",
+    "@itwin/itwinui-icons-react": "^1.1.2",
+    "@itwin/itwinui-react": "^1.37.3",
     "@reach/router": "^1.3.4",
     "dotenv": "^10.0.0",
-    "node-sass": "^7.0.1",
+    "node-sass": "^7.0.3",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-native-hash": "^2.0.3",
-    "react-native-web": "^0.17.7",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "typescript": "^4.1.2"
@@ -25,16 +22,16 @@
     "test": "react-scripts test",
     "prettier": "prettier --write ."
   },
-  "resolutions": {
-    "nth-check": "2.0.1",
-    "async": "2.6.4"
-  },
   "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1",
+    "@types/react": "^17.0.38"
   },
   "browserslist": {
     "production": [
@@ -51,8 +48,8 @@
   "devDependencies": {
     "@types/node": "^12.20.37",
     "@types/reach__router": "^1.3.7",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-table": "^7.7.1",
     "@types/uuid": "^8.3.4",
     "openapi-typescript": "^4.5.0",
