--- a/Portal/package.json
+++ b/Portal/package.json
@@ -8,7 +8,7 @@
     "@itwin/itwinui-react": "^1.37.3",
     "@reach/router": "^1.3.4",
     "dotenv": "^16.4.5",
-    "node-sass": "^9.0.0",
+    "sass": "^1.77.8",
     "oidc-client": "^1.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -47,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.0.2",
     "@types/reach__router": "^1.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
