--- a/Portal/package.json
+++ b/Portal/package.json
@@ -7,14 +7,14 @@
     "@itwin/itwinui-icons-react": "^1.1.2",
     "@itwin/itwinui-react": "^1.37.3",
     "@reach/router": "^1.3.4",
-    "dotenv": "^10.0.0",
-    "node-sass": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "sass": "^1.77.8",
     "oidc-client": "^1.11.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.1.2"
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,13 +47,13 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^12.20.37",
-    "@types/reach__router": "^1.3.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-table": "^7.7.1",
-    "@types/uuid": "^8.3.4",
-    "openapi-typescript": "^4.5.0",
-    "prettier": "^2.3.0"
+    "@types/node": "^22.0.2",
+    "@types/reach__router": "^1.3.15",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-table": "^7.7.20",
+    "@types/uuid": "^10.0.0",
+    "openapi-typescript": "^7.2.0",
+    "prettier": "^3.3.3"
   }
 }
